Fixed layout bug that was causing the horizontal scroll bar to be hidden on windows.
Closes #152

--- a/src/app/search/resources/RelatedTableGrid.css
+++ b/src/app/search/resources/RelatedTableGrid.css
@@ -1,7 +1,16 @@
+.related-table-grid {
+    overflow-x: auto;
+    overflow-y: hidden;
+    height: 179px;
+    border-left: 1px solid #ddd;
+    border-bottom: 1px solid #ddd;
+    border-right: 1px solid #ddd;
+}
 .related-table-grid .dgrid {
-    margin-top: 8px;
+    margin: 8px -2px -2px -2px;
     width: 900px;
     height: 170px;
+    border: none;
 }
 .related-table-grid .dgrid .dgrid-scroller .dgrid-cell {
     text-overflow: ellipsis;
